@@ -1,28 +1,27 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
 import sys
 from pyrapi2 import *
 from partnerships import *
 
 if len(sys.argv) != 2:
-    print "Invalid argument count"
+    print("Invalid argument count")
     sys.exit(1)
 
 slot = int(sys.argv[1])
 if not slot in (1, 2):
-    print "Invalid partnership id (must be either 1 or 2)"
+    print("Invalid partnership id (must be either 1 or 2)")
     sys.exit(1)
 
 s = RAPISession(SYNCE_LOG_LEVEL_DEFAULT)
 
 partnership = get_partnerships(s)[slot-1]
 if partnership == None:
-    print "Partnership does not exist"
+    print("Partnership does not exist")
     sys.exit(1)
 
-print "Found:", partnership
+print("Found:", partnership)
 
-print "Deleting partnership...",
+print("Deleting partnership...", end=' ')
 delete_partnership(s, partnership)
-print "done"
-
+print("done")
