@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
 # Some serial devices will not be picked up automatically by synce,
 # eg those on a serial to usb bridge. This tool will initiate connection.
@@ -12,7 +12,7 @@ import time
 import subprocess
 import logging, logging.handlers
 import platform
-import ConfigParser
+import configparser
 import dbus
 import gi
 
@@ -24,14 +24,14 @@ import synceconnector
 from synceconnector import signal_dccm_connect, process_config, get_logger, serial_stop_device, serial_start_device, serial_get_address, serial_get_devnum
 
 def print_usage():
-	print "Usage:"
-	print "------\n"
-	print "synce-serial <action> <device_file>"
-	print "\nwhere:\n"
-	print "<action>      - add or remove, to start or bring down the connection"
-	print "<device_file> - the device file for the connected device, eg. /dev/ttyS1"
-	print "For example:"
-	print "  synce-serial add /dev/ttyS1\n"
+    print("Usage:")
+    print("------\n")
+    print("synce-serial <action> <device_file>")
+    print("\nwhere:\n")
+    print("<action>      - add or remove, to start or bring down the connection")
+    print("<device_file> - the device file for the connected device, eg. /dev/ttyS1")
+    print("For example:")
+    print("  synce-serial add /dev/ttyS1\n")
 
 
 #
@@ -40,13 +40,13 @@ def print_usage():
 if __name__ == '__main__':
 
     if os.geteuid() != 0:
-	print "\nError: must be run as root\n"
-	sys.exit(1)
+        print("\nError: must be run as root\n")
+        sys.exit(1)
 
     if len(sys.argv) != 3:
-	print "\nError: invalid argument count\n"
-	print_usage()	
-	sys.exit(1)
+        print("\nError: invalid argument count\n")
+        print_usage()
+        sys.exit(1)
 
     logger = get_logger("synce-serial-start")
 
@@ -60,7 +60,7 @@ if __name__ == '__main__':
 
     action = sys.argv[1]
     if action != "add" and action != "remove":
-        print "\nError: invalid action\n"
+        print("\nError: invalid action\n")
         print_usage()
         sys.exit(1)
 
@@ -70,7 +70,7 @@ if __name__ == '__main__':
     device = udev_client.query_by_device_file(device_file)
     if device == None:
         logger.critical("Failed to find device "+device_file+" in udev")
-        sys.exit(1)        
+        sys.exit(1)
 
     if device.has_property("DEVPATH"):
         device_path = device.get_property("DEVPATH")
@@ -98,7 +98,7 @@ if __name__ == '__main__':
             if stat.S_ISCHR(os.stat(device_file).st_mode) == 0:
                 logger.critical("unable to find a character device named "+device_file)
                 sys.exit(1)
-        except Exception,e:
+        except Exception as e:
             logger.critical("Error stat'ing device file %s: %s" % (device_file, e))
             sys.exit(1)
 
