@@ -7,7 +7,7 @@ import time
 import re
 import subprocess
 import logging, logging.handlers
-import ConfigParser
+import configparser
 import dbus
 
 DBUS_DBUS_BUSNAME       = "org.freedesktop.DBus"
@@ -73,7 +73,7 @@ def rndis_static_config(iface):
     try:
         proc = subprocess.Popen(cmd_list, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
         output_text = proc.communicate()[0]
-    except Exception,e:
+    except Exception as e:
         logger.error("failure running ifconfig: %s" % e)
         return False, False
 
@@ -111,7 +111,7 @@ def rndis_dhcp_config(iface):
     try:
         proc = subprocess.Popen(cmd_list, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
         output_text = proc.communicate()[0]
-    except Exception,e:
+    except Exception as e:
         logger.error("failure running dhclient: %s" % e)
         return False, False
 
@@ -163,7 +163,7 @@ def rndis_dhcp_unconfig(iface):
     try:
         proc = subprocess.Popen(cmd_list, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
         output_text = proc.communicate()[0]
-    except Exception,e:
+    except Exception as e:
         logger.error("failure running dhclient: %s" % e)
         return True
 
@@ -220,13 +220,13 @@ def serial_stop_device(linkname):
             f = open(pidfile, 'r')
             textpid = f.readline().rstrip()
             f.close()
-        except Exception, e:
+        except Exception as e:
             logger.warning("unable to read PID from %s: %s", pidfile, e)
             return False
 
         try:
             pid = int(textpid)
-        except Exception, e:
+        except Exception as e:
             logger.error("found invalid PID in %s: %s", pidfile, e)
             return False
 
@@ -234,7 +234,7 @@ def serial_stop_device(linkname):
 
         try:
             os.kill(pid, signal.SIGTERM)
-        except Exception,e:
+        except Exception as e:
             logger.error("unable stop the SynCE connection with PID %d: %s", pid, e)
             return False
 
@@ -273,7 +273,7 @@ def serial_start_device(device_file, local_ip, remote_ip, linkname):
     try:
         proc = subprocess.Popen(cmd_list, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
         output_text = proc.communicate()[0]
-    except Exception,e:
+    except Exception as e:
         logger.error("failure running pppd: %s" % e)
         return False
 
@@ -311,7 +311,7 @@ def run_dccm(device_path, device_ip, local_ip, rndis):
 
     try:
         os.execv("@LIBEXECDIR@/dccm", cmd_list)
-    except Exception,e:
+    except Exception as e:
         logger.error("failed to exec dccm !!: %s" % e)
 
     return
@@ -335,7 +335,7 @@ def signal_dccm_connect(device_path, device_ip, local_ip, rndis):
 
     try:
         dccm_manager = dbus.Interface(dbus.SystemBus().get_object(DBUS_SYNCE_BUSNAME, DBUS_SYNCE_MANAGER_OBJPATH), DBUS_SYNCE_MANAGER_IFACE)
-    except Exception,e:
+    except Exception as e:
         logger.critical("failed to connect to dccm device manager %s: %s" % (device_path, e))
         return False
 
@@ -344,12 +344,12 @@ def signal_dccm_connect(device_path, device_ip, local_ip, rndis):
         rndis_text = "True"
     else:
         rndis_text = "False"
-        
+
     logger.debug("device-path=%s, device-ip=%s, local-ip=%s, rndis=%s" % (device_path, device_ip, local_ip, rndis_text))
 
     try:
         dccm_manager.DeviceConnected(device_path, device_ip, local_ip, rndis)
-    except Exception, e:
+    except Exception as e:
         logger.critical("failed to signal device connect to dccm device manager %s: %s" % (DBUS_SYNCE_MANAGER_OBJPATH, e))
         return False
 
@@ -374,7 +374,7 @@ def signal_dccm_disconnect(device_path):
 
     try:
         dccm_manager = dbus.Interface(dbus.SystemBus().get_object(DBUS_SYNCE_BUSNAME, DBUS_SYNCE_MANAGER_OBJPATH), DBUS_SYNCE_MANAGER_IFACE)
-    except Exception,e:
+    except Exception as e:
         logger.critical("failed to connect to dccm device manager %s: %s" % (device_path, e))
         return False
 
@@ -383,7 +383,7 @@ def signal_dccm_disconnect(device_path):
 
     try:
         dccm_manager.DeviceDisconnected(device_path)
-    except Exception, e:
+    except Exception as e:
         logger.critical("failed to signal device disconnect to dccm device manager %s: %s" % (DBUS_SYNCE_MANAGER_OBJPATH, e))
         return False
 
@@ -400,10 +400,10 @@ def process_config():
     global DEFAULT_SERIAL_NETWORK
     global pppopts
 
-    config = ConfigParser.ConfigParser()
+    config = configparser.ConfigParser()
     try:
         config.read(config_file)
-    except Exception,e:
+    except Exception as e:
         logger.warning("failed to parse config file %s: %s" % (config_file, e))
         return False
 
@@ -426,7 +426,7 @@ def process_config():
 
     if config.has_option('rndis', 'static_device_ip'):
         new_ip = config.get('rndis', 'static_device_ip')
-        
+
         ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
         ip_match = ip_re.match(new_ip)
         if ip_match != None:
@@ -436,7 +436,7 @@ def process_config():
 
     if config.has_option('rndis', 'static_local_ip'):
         new_ip = config.get('rndis', 'static_local_ip')
-        
+
         ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
         ip_match = ip_re.match(new_ip)
         if ip_match != None:
@@ -446,7 +446,7 @@ def process_config():
 
     if config.has_option('rndis', 'static_netmask'):
         new_ip = config.get('rndis', 'static_netmask')
-        
+
         ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
         ip_match = ip_re.match(new_ip)
         if ip_match != None:
@@ -456,7 +456,7 @@ def process_config():
 
     if config.has_option('rndis', 'static_broadcast'):
         new_ip = config.get('rndis', 'static_broadcast')
-        
+
         ip_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$)')
         ip_match = ip_re.match(new_ip)
         if ip_match != None:
@@ -471,7 +471,7 @@ def process_config():
 
     if config.has_option('serial', 'network'):
         new_network = config.get('serial', 'network')
-        
+
         network_re = re.compile('^(\d{1,3}\.\d{1,3}\.\d{1,3}$)')
         network_match = network_re.match(new_network)
         if network_match != None:
@@ -480,6 +480,3 @@ def process_config():
             logger.warning("found invalid network in config file %s: %s" % (config_file, new_network))
 
     return True
-
-
-
