@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
 import sys
 import os
@@ -20,16 +20,16 @@ if __name__ == '__main__':
     device_ip = False
     local_ip = False
 
-    if os.environ.has_key("ACTION"):
+    if "ACTION" in os.environ:
         action = os.environ["ACTION"]
 
-        if os.environ.has_key("INTERFACE"):
+        if "INTERFACE" in os.environ:
             iface = os.environ["INTERFACE"]
         else:
             logger.critical("Udev environment not set: INTERFACE missing")
             sys.exit(1)
 
-        if os.environ.has_key("DEVPATH"):
+        if "DEVPATH" in os.environ:
             device_path = os.environ["DEVPATH"]
         else:
             logger.critical("Udev environment not set: DEVPATH missing")
@@ -68,4 +68,3 @@ if __name__ == '__main__':
         rndis_dhcp_unconfig(iface)
 
     sys.exit(0)
-
