@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 
 import sys
 import os
@@ -8,7 +8,7 @@ import time
 import subprocess
 import logging, logging.handlers
 import platform
-import ConfigParser
+import configparser
 import dbus
 
 sys.path.insert(0,"@SYNCEDATADIR@")
@@ -26,16 +26,16 @@ if __name__ == '__main__':
 
     device_path = False
 
-    if os.environ.has_key("ACTION"):
+    if "ACTION" in os.environ:
         action = os.environ["ACTION"]
 
-        if os.environ.has_key("DEVPATH"):
+        if "DEVPATH" in os.environ:
             device_path = os.environ["DEVPATH"]
         else:
             logger.critical("Udev environment not set: DEVPATH missing")
             sys.exit(1)
 
-        if os.environ.has_key("SUBSYSTEM"):
+        if "SUBSYSTEM" in os.environ:
             subsystem = os.environ["SUBSYSTEM"]
         else:
             logger.critical("Udev environment not set: SUBSYSTEM missing")
@@ -48,7 +48,7 @@ if __name__ == '__main__':
         else:
             try:
                 device_file = os.environ["DEVNAME"]
-            except Exception,e:
+            except Exception as e:
                 logger.critical("Udev environment not set: DEVNAME missing")
                 sys.exit(1)
 
@@ -70,7 +70,7 @@ if __name__ == '__main__':
             if stat.S_ISCHR(os.stat(device_file).st_mode) == 0:
                 logger.critical("unable to find a character device named "+device_file)
                 sys.exit(1)
-        except Exception,e:
+        except Exception as e:
             logger.critical("Error stat'ing device file %s: %s" % (device_file, e))
             sys.exit(1)
 
