@@ -1,3 +1,7 @@
+2021-03-17  Arndt Kaiser
+
+	* migrate python scripts of core to python3
+
 2019-09-03  Arndt Kaiser
 
 	* fix unhandled string-truncations which are detected by new
